--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   type      : # "person" (default), "organization"
   name      : CyberSec Pandit
   url       :
-  avatar    : # path or url of avatar image (square)
+  avatar    : /assets/pic-square.png # path or url of avatar image (square)
   bio       : Your cyber friend.
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
@@ -74,7 +74,7 @@ paths:
 excerpt_separator: <!--more-->
 
 ## license
-license: CC-BY-NC-4.0 # "CC-BY-4.0", "CC-BY-SA-4.0", "CC-BY-NC-4.0", "CC-BY-ND-4.0"
+license: CC-BY-4.0 # "CC-BY-4.0", "CC-BY-SA-4.0", "CC-BY-NC-4.0", "CC-BY-ND-4.0"
 
 ## TOC
 toc:
