--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 #    `--'   `----''--'   '--' `--'
 
 
-theme: jekyll-text-theme
+# theme: jekyll-text-theme
 
 ## => Site Settings
 ##############################
