--- a/_config.yml
+++ b/_config.yml
@@ -183,6 +183,9 @@ markdown    : kramdown
 highlighter : rouge
 permalink   : date
 
+kramdown:
+  parse_block_html: true
+
 exclude:
   - CHANGELOG.md
   - HOW_TO_RELEASE.md
